name:                hackertyper
version:             0.1.0.1
synopsis:            "Hack" like a programmer in movies and games!
description:         Simply randomly mash your keyboard and code will display on your screen.
homepage:            https://github.com/fgaz/hackertyper
license:             MIT
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          fgaz@users.noreply.github.com
-- copyright:           
-- category:            
build-type:          Simple
--extra-source-files:  kernel.txt
data-files:          kernel.txt
cabal-version:       >=1.10

executable hackertyper
  main-is:             hackertyper.hs
  other-modules:       Paths_hackertyper
  -- other-extensions:    
  build-depends:       base ==4.*
  -- hs-source-dirs:      
  default-language:    Haskell2010